# filemanager

./: CMakeLists.txt  Makefile  README.md  common.h  fileops.cpp  fileops.h  logger.cpp  logger.h  main.cpp  resource.rc  resource.res  search.cpp  search.h  ui.cpp  ui.h
fm_logs/: log_20260402_185338.json  log_20260402_193932.json  log_20260402_194423.json
